syntax = "proto3";

package chat;

message CreatePrivateChatRequest {
    repeated string account_ids = 1;
}

message UpdatePrivateChatRequest {
    repeated string account_ids = 1;
}

message LastChatMessagesRequest {
    repeated string chat_ids = 1;
}

message ChatSeenMessageRequest {
    string account_id = 1;
    string message_id = 2;
    string chat_id = 3;
}

message ChatSeenMessagesRequest {
    repeated string message_ids = 1;
}

message ChatSubscriptionResponse {
    string chat_id = 1;
    string request_at = 2;
    string account_id = 3;
    string joined_at = 4;
    string public_key_encrypted = 5;
    string private_key_encrypted = 6;
    string last_seen_at = 7;
}

message ChatMessageResponse {
    string id = 1;
    string chat_id = 2;
    string account_id = 3;
    string created_at = 4;
    string message_encrypted = 5;
    string nonce = 6;
    repeated ChatSeenMessageResponse seen_by = 7;
}

message ChatMessagesResponse {
    repeated ChatMessageResponse messages = 1;
}

message ChatPrivateResponse {
    string chat_id = 1;
    repeated string account_ids = 2;
}

message ChatSeenMessageResponse {
    string message_id = 1;
    string seen_at = 2;
    string account_id = 3;
    string chat_id = 4;
}

message ChatSeenMessagesResponse {
    repeated ChatSeenMessageResponse seen_messages = 1;
}

message ChatResponse {
    string id = 1;
    string created_at = 2;
    string type = 3;
    string updated_at = 4;
    ChatPrivateResponse private = 5;
}